// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderListingCard karakterizasyon (taşıma güvenlik ağı) > KYB engelli satıcı 1`] = `
"
    <div class="fy26-product-card-wrapper relative isolate flex flex-col justify-between w-full rounded-md overflow-hidden bg-white pb-3 border-0
            group-data-[list-mode=grid]/grid:border group-data-[list-mode=grid]/grid:border-gray-200 group-data-[list-mode=grid]/grid:rounded-md
            min-[480px]:group-data-[list-mode=grid]/grid:border-0
            group-data-[list-mode=list]/grid:grid
            group-data-[list-mode=list]/grid:grid-cols-[76px_1fr_auto]
            group-data-[list-mode=list]/grid:grid-rows-[1fr_auto]
            group-data-[list-mode=list]/grid:gap-x-3
            group-data-[list-mode=list]/grid:gap-y-0
            group-data-[list-mode=list]/grid:p-3
            group-data-[list-mode=list]/grid:border
            group-data-[list-mode=list]/grid:border-[var(--product-card-border,#e5e7eb)]
            group-data-[list-mode=list]/grid:rounded-lg
            group-data-[list-mode=list]/grid:overflow-visible
            min-[480px]:group-data-[list-mode=list]/grid:grid-cols-[200px_1fr]
            min-[480px]:group-data-[list-mode=list]/grid:gap-x-4
            min-[1200px]:group-data-[list-mode=list]/grid:flex
            min-[1200px]:group-data-[list-mode=list]/grid:flex-row
            min-[1200px]:group-data-[list-mode=list]/grid:items-start
            min-[1200px]:group-data-[list-mode=list]/grid:gap-4">
      <!-- Image area (full-bleed, kart padding'inin dışında) + favori kalbi (bkz. favBtnHtml) -->
      <div class="searchx-img-area relative mb-3
            group-data-[list-mode=grid]/grid:mb-2
            min-[480px]:group-data-[list-mode=grid]/grid:mb-3
            group-data-[list-mode=list]/grid:row-[1/-1]
            group-data-[list-mode=list]/grid:col-start-1
            group-data-[list-mode=list]/grid:self-start
            group-data-[list-mode=list]/grid:mb-0
            group-data-[list-mode=list]/grid:w-full
            group-data-[list-mode=list]/grid:rounded-md
            group-data-[list-mode=list]/grid:border
            group-data-[list-mode=list]/grid:border-gray-200
            group-data-[list-mode=list]/grid:overflow-hidden
            min-[480px]:group-data-[list-mode=list]/grid:border-0
            min-[480px]:group-data-[list-mode=list]/grid:rounded-none
            min-[1200px]:group-data-[list-mode=list]/grid:w-60
            min-[1200px]:group-data-[list-mode=list]/grid:shrink-0">
        <a href="/pages/product-detail.html?id=LST-0001" class="block">
          
          <div class="absolute top-2 start-2 z-20 px-2 py-1 rounded-md bg-amber-50 border border-amber-300 text-amber-800 text-[10px] font-semibold shadow-sm pointer-events-none max-w-[60%] truncate" title="This seller is not verified yet">This seller is not verified yet</div>
          
          
    <div class="relative aspect-square w-full flex-shrink-0 overflow-hidden group/img">
      <!-- Slides container -->
      <div class="product-slider flex w-full h-full transition-transform duration-300 ease-out"
           data-slider-id="LST-0001"
           style="transform: translateX(0%)">
        
      <div class="w-full h-full flex-shrink-0">
        <img src="https://example.com/img.jpg" alt="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş" class="w-full h-full object-cover" decoding="async"  />
      </div>
    
      </div>

      
      

      <!-- Camera icon (bottom-left) - DISABLED -->
    </div>
  
          <div data-sp-slot="LST-0001" data-sp-align="center" class="hidden group-data-[list-mode=grid]/grid:flex items-center justify-center gap-1 absolute inset-x-0 bottom-0 z-20 h-[21px] min-[480px]:h-6 px-2 overflow-hidden bg-white/95 border-t border-gray-100 text-[9.5px] min-[480px]:text-[10.5px] font-bold whitespace-nowrap text-[rgb(34,137,31)] pointer-events-none">
    <svg class="w-3.5 h-3.5 shrink-0 text-[rgb(34,137,31)]" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
      <polyline points="20 6 9 17 4 12"/>
    </svg>
  <span class="truncate">5 günde sevkiyat</span></div>
        </a>
        <button type="button"
              data-fav-btn="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5 adet"
              class="th-no-press absolute top-2 end-2 z-30 w-8 h-8 flex items-center justify-center rounded-full border-0 bg-white/95 shadow-sm cursor-pointer text-gray-500 hover:text-red-500
              max-sm:group-data-[list-mode=list]/grid:top-1 max-sm:group-data-[list-mode=list]/grid:end-1 max-sm:group-data-[list-mode=list]/grid:w-6 max-sm:group-data-[list-mode=list]/grid:h-6"
              aria-label="Add to favorites">
        <svg class="w-[18px] h-[18px] pointer-events-none max-sm:group-data-[list-mode=list]/grid:w-3.5 max-sm:group-data-[list-mode=list]/grid:h-3.5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.51 4.04 3 5.5l7 7Z"/></svg>
      </button>
      </div>

      <!-- Content area -->
      <div class="fy26-product-card-content flex-1 flex flex-col
            group-data-[list-mode=list]/grid:col-start-2
            group-data-[list-mode=list]/grid:row-start-1
            group-data-[list-mode=list]/grid:min-w-0
            min-[1200px]:group-data-[list-mode=list]/grid:flex-1">
        <!-- Title area -->
        <div class="px-3">
          <h2 class="searchx-product-e-title text-[13px] font-normal leading-[17px] min-h-[34px] min-[480px]:text-sm min-[480px]:leading-[20px] min-[480px]:min-h-[40px] text-[#333] overflow-hidden text-ellipsis line-clamp-2 m-0
            group-data-[list-mode=list]/grid:line-clamp-1 group-data-[list-mode=list]/grid:!min-h-0 min-[480px]:group-data-[list-mode=list]/grid:line-clamp-2
            min-[480px]:group-data-[list-mode=list]/grid:!h-auto
            min-[480px]:group-data-[list-mode=list]/grid:text-base
            min-[480px]:group-data-[list-mode=list]/grid:leading-[22px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-[13px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-[17px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-[51px]">
            <a href="/magaza/SEL-00020" title="EgeBeauty" class="font-semibold text-gray-900 no-underline hover:underline">EgeBeauty<img src="/src/assets/images/verfied.png" alt="" class="inline-block w-3.5 h-3.5 align-[-2.5px] ms-0.5" /></a> <a href="/pages/product-detail.html?id=LST-0001" target="_blank" class="text-inherit no-underline hover:text-primary-500"><span>Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş</span></a>
          </h2>
          <div data-sp-slot="LST-0001" class="hidden group-data-[list-mode=list]/grid:flex items-center min-w-0 gap-1 mt-1 h-[15px] overflow-hidden text-[11px] leading-tight min-[480px]:text-xs text-[rgb(34,137,31)]">
        
    <svg class="w-3.5 h-3.5 shrink-0 text-[rgb(34,137,31)]" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
      <polyline points="20 6 9 17 4 12"/>
    </svg>
  
        <span class="truncate">5 günde sevkiyat</span>
      </div>
          <div class="flex min-[480px]:hidden items-center gap-x-1.5 gap-y-0.5 mt-1 text-[11px] leading-tight text-gray-500"><span class="inline-flex items-center gap-0.5"><svg style="width:12px;height:12px;flex-shrink:0;" viewBox="0 0 24 24" fill="#f59e0b" stroke="none"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87L18.18 21 12 17.27 5.82 21 7 14.14l-5-4.87 6.91-1.01L12 2z"/></svg><span class="font-medium text-gray-700">4.2</span><span class="text-gray-400">(76)</span></span><span class="text-gray-300">·</span><span class="whitespace-nowrap">Min. 5 adet</span></div>
        </div>

        <!-- Price area -->
        <div class="px-3 mt-2">
          <div class="fy26-price text-sm font-medium leading-[20px] text-amber-800" title="This seller is not verified yet">This seller is not verified yet</div>
          <div class="fy26-moq-stats hidden min-[480px]:flex gap-1.5 flex-wrap mt-0.5
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-4
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:[&_.text-sm]:text-xs
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:[&_.text-sm]:leading-4">
            <div class="text-[11px] leading-tight min-[480px]:text-sm min-[480px]:leading-[18px] font-normal text-gray-900">Minimum order: 5 adet</div>
          </div>
          
        </div>

        <!-- Supplier area -->
        <div class="px-3 mt-2">
          <a class="hidden min-[480px]:block text-xs font-normal text-[#767676] no-underline whitespace-nowrap overflow-hidden text-ellipsis mb-0.5">EgeBeauty</a>
          <div class="hidden min-[480px]:flex flex-wrap items-center gap-x-1 gap-y-0.5 text-[11px] min-[480px]:text-xs font-normal leading-4 text-black mt-0.5">
        <svg style="width:12px;height:12px;flex-shrink:0;" viewBox="0 0 24 24" fill="#f59e0b" stroke="none"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87L18.18 21 12 17.27 5.82 21 7 14.14l-5-4.87 6.91-1.01L12 2z"/></svg>
        <a class="text-xs font-normal text-black no-underline"><span>25 yrs</span> 🇹🇷 <span>TR</span></a><span class="text-xs font-normal text-gray-900 leading-4"><span>4.2</span>/5.0 <span>(76)</span></span>
      </div>
        </div>
      </div>

      <!-- Action buttons -->
      <div class="action-area-layout flex group-data-[list-mode=list]/grid:hidden min-[480px]:group-data-[list-mode=list]/grid:flex group-data-[list-mode=grid]/grid:hidden min-[480px]:group-data-[list-mode=grid]/grid:flex flex-col min-[480px]:flex-row gap-2 px-3 mt-3 items-stretch min-[480px]:items-center
            group-data-[list-mode=list]/grid:col-start-2
            group-data-[list-mode=list]/grid:row-start-2
            group-data-[list-mode=list]/grid:px-0
            group-data-[list-mode=list]/grid:mt-2
            min-[1200px]:group-data-[list-mode=list]/grid:flex-col
            min-[1200px]:group-data-[list-mode=list]/grid:items-stretch
            min-[1200px]:group-data-[list-mode=list]/grid:w-[140px]
            min-[1200px]:group-data-[list-mode=list]/grid:mt-0
            min-[1200px]:group-data-[list-mode=list]/grid:shrink-0">
        <button type="button" class="searchx-product-e-abutton th-btn flex-1 flex items-center justify-center h-9 text-xs sm:text-sm font-medium whitespace-nowrap opacity-50 !cursor-not-allowed pointer-events-none
              min-[1200px]:group-data-[list-mode=list]/grid:flex-none
              min-[1200px]:group-data-[list-mode=list]/grid:w-full
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:px-2
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-8"
              disabled aria-disabled="true" title="This seller is not verified yet, the product cannot be added to cart">
        Add to cart
      </button>
        <button type="button"
              data-chat-trigger
              data-seller-id="SEL-00020"
              data-product-id="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5"
              class="th-btn-outline searchx-product-e-chatbutton flex-1 flex items-center justify-center h-9 text-xs sm:text-sm font-medium cursor-pointer whitespace-nowrap
              min-[1200px]:group-data-[list-mode=list]/grid:flex-none
              min-[1200px]:group-data-[list-mode=list]/grid:w-full
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:px-2
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-8">
        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
        Chat with seller
      </button>
      </div>
      <div class="hidden group-data-[list-mode=grid]/grid:flex min-[480px]:group-data-[list-mode=grid]/grid:hidden items-center gap-1 px-2 mt-auto pt-2.5">
      <button type="button" class="flex-1 min-w-0 flex items-center justify-center gap-1 h-8 rounded-md !px-1 text-[11px] font-semibold whitespace-nowrap th-btn opacity-50 !cursor-not-allowed pointer-events-none" disabled aria-disabled="true" title="This seller is not verified yet"><span class="hidden min-[400px]:inline-flex shrink-0"><svg class="w-4 h-4 pointer-events-none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="9" cy="20" r="1"/><circle cx="18" cy="20" r="1"/><path d="M2 3h2.2l2.2 12.2a1.5 1.5 0 0 0 1.5 1.2h8.6a1.5 1.5 0 0 0 1.5-1.2L21 7H5"/></svg></span><span class="truncate">Add to cart</span></button>
      <button type="button" data-chat-trigger
              data-seller-id="SEL-00020"
              data-product-id="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5"
        class="th-btn-outline shrink-0 flex items-center justify-center !w-8 !h-8 !p-0 rounded-md" aria-label="Chat with seller">
        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="pointer-events-none" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
      </button>
    </div>
      <div class="hidden group-data-[list-mode=list]/grid:flex min-[480px]:group-data-[list-mode=list]/grid:!hidden flex-col items-center gap-2 col-start-3 row-start-1 self-center pl-1">
      <button type="button" data-chat-trigger
              data-seller-id="SEL-00020"
              data-product-id="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5"
        class="th-btn-outline shrink-0 flex items-center justify-center !w-10 !h-10 !p-0 rounded-full" aria-label="Chat with seller">
        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="pointer-events-none" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
      </button>
      <button type="button" class="shrink-0 flex items-center justify-center !w-10 !h-10 !p-0 rounded-full th-btn opacity-50 !cursor-not-allowed pointer-events-none" disabled aria-disabled="true" aria-label="Add to cart" title="This seller is not verified yet, the product cannot be added to cart"><svg class="w-5 h-5 pointer-events-none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" aria-hidden="true"><path d="M12 5v14M5 12h14"/></svg></button>
    </div>
    </div>
  "
`;

exports[`renderListingCard karakterizasyon (taşıma güvenlik ağı) > minimal kart 1`] = `
"
    <div class="fy26-product-card-wrapper relative isolate flex flex-col justify-between w-full rounded-md overflow-hidden bg-white pb-3 border-0
            group-data-[list-mode=grid]/grid:border group-data-[list-mode=grid]/grid:border-gray-200 group-data-[list-mode=grid]/grid:rounded-md
            min-[480px]:group-data-[list-mode=grid]/grid:border-0
            group-data-[list-mode=list]/grid:grid
            group-data-[list-mode=list]/grid:grid-cols-[76px_1fr_auto]
            group-data-[list-mode=list]/grid:grid-rows-[1fr_auto]
            group-data-[list-mode=list]/grid:gap-x-3
            group-data-[list-mode=list]/grid:gap-y-0
            group-data-[list-mode=list]/grid:p-3
            group-data-[list-mode=list]/grid:border
            group-data-[list-mode=list]/grid:border-[var(--product-card-border,#e5e7eb)]
            group-data-[list-mode=list]/grid:rounded-lg
            group-data-[list-mode=list]/grid:overflow-visible
            min-[480px]:group-data-[list-mode=list]/grid:grid-cols-[200px_1fr]
            min-[480px]:group-data-[list-mode=list]/grid:gap-x-4
            min-[1200px]:group-data-[list-mode=list]/grid:flex
            min-[1200px]:group-data-[list-mode=list]/grid:flex-row
            min-[1200px]:group-data-[list-mode=list]/grid:items-start
            min-[1200px]:group-data-[list-mode=list]/grid:gap-4">
      <!-- Image area (full-bleed, kart padding'inin dışında) + favori kalbi (bkz. favBtnHtml) -->
      <div class="searchx-img-area relative mb-3
            group-data-[list-mode=grid]/grid:mb-2
            min-[480px]:group-data-[list-mode=grid]/grid:mb-3
            group-data-[list-mode=list]/grid:row-[1/-1]
            group-data-[list-mode=list]/grid:col-start-1
            group-data-[list-mode=list]/grid:self-start
            group-data-[list-mode=list]/grid:mb-0
            group-data-[list-mode=list]/grid:w-full
            group-data-[list-mode=list]/grid:rounded-md
            group-data-[list-mode=list]/grid:border
            group-data-[list-mode=list]/grid:border-gray-200
            group-data-[list-mode=list]/grid:overflow-hidden
            min-[480px]:group-data-[list-mode=list]/grid:border-0
            min-[480px]:group-data-[list-mode=list]/grid:rounded-none
            min-[1200px]:group-data-[list-mode=list]/grid:w-60
            min-[1200px]:group-data-[list-mode=list]/grid:shrink-0">
        <a href="/pages/product-detail.html?id=LST-0002" class="block">
          
          
          
          
    <div class="relative aspect-square w-full flex-shrink-0 overflow-hidden group/img">
      <!-- Slides container -->
      <div class="product-slider flex w-full h-full transition-transform duration-300 ease-out"
           data-slider-id="LST-0002"
           style="transform: translateX(0%)">
        
      <div class="w-full h-full flex-shrink-0 flex items-center justify-center bg-gray-100">
        <svg class="w-12 h-12 text-gray-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.25 15.75l5.159-5.159a2.25 2.25 0 013.182 0l5.159 5.159m-1.5-1.5l1.409-1.41a2.25 2.25 0 013.182 0l2.909 2.91m-18 3.75h16.5a1.5 1.5 0 001.5-1.5V6a1.5 1.5 0 00-1.5-1.5H3.75A1.5 1.5 0 002.25 6v12a1.5 1.5 0 001.5 1.5zm10.5-11.25h.008v.008h-.008V8.25zm.375 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"/>
        </svg>
      </div>
    
      </div>

      
      

      <!-- Camera icon (bottom-left) - DISABLED -->
    </div>
  
          <div data-sp-slot="LST-0002" data-sp-align="center" class="sp-strip-empty !hidden hidden group-data-[list-mode=grid]/grid:flex items-center justify-center gap-1 absolute inset-x-0 bottom-0 z-20 h-[21px] min-[480px]:h-6 px-2 overflow-hidden bg-white/95 border-t border-gray-100 text-[9.5px] min-[480px]:text-[10.5px] font-bold whitespace-nowrap text-[rgb(34,137,31)] pointer-events-none">
    <svg class="w-3.5 h-3.5 shrink-0 text-[rgb(34,137,31)]" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
      <polyline points="20 6 9 17 4 12"/>
    </svg>
  <span class="truncate"></span></div>
        </a>
        <button type="button"
              data-fav-btn="LST-0002"
              data-product-title="Rice — Toptan Gıda Tedariki"
              data-product-price="₺188,33-210,48"
              data-product-thumb=""
              data-product-min-order="10 adet"
              class="th-no-press absolute top-2 end-2 z-30 w-8 h-8 flex items-center justify-center rounded-full border-0 bg-white/95 shadow-sm cursor-pointer text-gray-500 hover:text-red-500
              max-sm:group-data-[list-mode=list]/grid:top-1 max-sm:group-data-[list-mode=list]/grid:end-1 max-sm:group-data-[list-mode=list]/grid:w-6 max-sm:group-data-[list-mode=list]/grid:h-6"
              aria-label="Add to favorites">
        <svg class="w-[18px] h-[18px] pointer-events-none max-sm:group-data-[list-mode=list]/grid:w-3.5 max-sm:group-data-[list-mode=list]/grid:h-3.5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.51 4.04 3 5.5l7 7Z"/></svg>
      </button>
      </div>

      <!-- Content area -->
      <div class="fy26-product-card-content flex-1 flex flex-col
            group-data-[list-mode=list]/grid:col-start-2
            group-data-[list-mode=list]/grid:row-start-1
            group-data-[list-mode=list]/grid:min-w-0
            min-[1200px]:group-data-[list-mode=list]/grid:flex-1">
        <!-- Title area -->
        <div class="px-3">
          <h2 class="searchx-product-e-title text-[13px] font-normal leading-[17px] min-h-[34px] min-[480px]:text-sm min-[480px]:leading-[20px] min-[480px]:min-h-[40px] text-[#333] overflow-hidden text-ellipsis line-clamp-2 m-0
            group-data-[list-mode=list]/grid:line-clamp-1 group-data-[list-mode=list]/grid:!min-h-0 min-[480px]:group-data-[list-mode=list]/grid:line-clamp-2
            min-[480px]:group-data-[list-mode=list]/grid:!h-auto
            min-[480px]:group-data-[list-mode=list]/grid:text-base
            min-[480px]:group-data-[list-mode=list]/grid:leading-[22px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-[13px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-[17px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-[51px]">
            <a href="/pages/product-detail.html?id=LST-0002" target="_blank" class="text-inherit no-underline hover:text-primary-500"><span>Rice — Toptan Gıda Tedariki</span></a>
          </h2>
          
          <div class="flex min-[480px]:hidden items-center gap-x-1.5 gap-y-0.5 mt-1 text-[11px] leading-tight text-gray-500"><span class="whitespace-nowrap">Min. 10 adet</span></div>
        </div>

        <!-- Price area -->
        <div class="px-3 mt-2">
          <div class="fy26-price text-[15px] leading-tight font-semibold text-gray-900 whitespace-nowrap min-[480px]:text-lg sm:text-xl sm:leading-[26px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-base
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-[1.375rem]">₺188,33-210,48</div>
          <div class="fy26-moq-stats hidden min-[480px]:flex gap-1.5 flex-wrap mt-0.5
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-4
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:[&_.text-sm]:text-xs
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:[&_.text-sm]:leading-4">
            <div class="text-[11px] leading-tight min-[480px]:text-sm min-[480px]:leading-[18px] font-normal text-gray-900">Minimum order: 10 adet</div>
          </div>
          
        </div>

        <!-- Supplier area -->
        <div class="px-3 mt-2">
          
          
        </div>
      </div>

      <!-- Action buttons -->
      <div class="action-area-layout flex group-data-[list-mode=list]/grid:hidden min-[480px]:group-data-[list-mode=list]/grid:flex group-data-[list-mode=grid]/grid:hidden min-[480px]:group-data-[list-mode=grid]/grid:flex flex-col min-[480px]:flex-row gap-2 px-3 mt-3 items-stretch min-[480px]:items-center
            group-data-[list-mode=list]/grid:col-start-2
            group-data-[list-mode=list]/grid:row-start-2
            group-data-[list-mode=list]/grid:px-0
            group-data-[list-mode=list]/grid:mt-2
            min-[1200px]:group-data-[list-mode=list]/grid:flex-col
            min-[1200px]:group-data-[list-mode=list]/grid:items-stretch
            min-[1200px]:group-data-[list-mode=list]/grid:w-[140px]
            min-[1200px]:group-data-[list-mode=list]/grid:mt-0
            min-[1200px]:group-data-[list-mode=list]/grid:shrink-0">
        <button type="button" class="searchx-product-e-abutton th-btn flex-1 flex items-center justify-center h-9 text-xs sm:text-sm font-medium cursor-pointer whitespace-nowrap
              min-[1200px]:group-data-[list-mode=list]/grid:flex-none
              min-[1200px]:group-data-[list-mode=list]/grid:w-full
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:px-2
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-8"
              data-add-to-cart="LST-0002">
        Add to cart
      </button>
        <button type="button"
              data-chat-trigger
              data-seller-id=""
              data-product-id="LST-0002"
              data-product-title="Rice — Toptan Gıda Tedariki"
              data-product-price="₺188,33-210,48"
              data-product-thumb=""
              data-product-min-order="10"
              class="th-btn-outline searchx-product-e-chatbutton flex-1 flex items-center justify-center h-9 text-xs sm:text-sm font-medium cursor-pointer whitespace-nowrap
              min-[1200px]:group-data-[list-mode=list]/grid:flex-none
              min-[1200px]:group-data-[list-mode=list]/grid:w-full
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:px-2
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-8">
        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
        Chat with seller
      </button>
      </div>
      <div class="hidden group-data-[list-mode=grid]/grid:flex min-[480px]:group-data-[list-mode=grid]/grid:hidden items-center gap-1 px-2 mt-auto pt-2.5">
      <button type="button" class="flex-1 min-w-0 flex items-center justify-center gap-1 h-8 rounded-md !px-1 text-[11px] font-semibold whitespace-nowrap th-btn" data-add-to-cart="LST-0002"><span class="hidden min-[400px]:inline-flex shrink-0"><svg class="w-4 h-4 pointer-events-none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="9" cy="20" r="1"/><circle cx="18" cy="20" r="1"/><path d="M2 3h2.2l2.2 12.2a1.5 1.5 0 0 0 1.5 1.2h8.6a1.5 1.5 0 0 0 1.5-1.2L21 7H5"/></svg></span><span class="truncate">Add to cart</span></button>
      <button type="button" data-chat-trigger
              data-seller-id=""
              data-product-id="LST-0002"
              data-product-title="Rice — Toptan Gıda Tedariki"
              data-product-price="₺188,33-210,48"
              data-product-thumb=""
              data-product-min-order="10"
        class="th-btn-outline shrink-0 flex items-center justify-center !w-8 !h-8 !p-0 rounded-md" aria-label="Chat with seller">
        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="pointer-events-none" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
      </button>
    </div>
      <div class="hidden group-data-[list-mode=list]/grid:flex min-[480px]:group-data-[list-mode=list]/grid:!hidden flex-col items-center gap-2 col-start-3 row-start-1 self-center pl-1">
      <button type="button" data-chat-trigger
              data-seller-id=""
              data-product-id="LST-0002"
              data-product-title="Rice — Toptan Gıda Tedariki"
              data-product-price="₺188,33-210,48"
              data-product-thumb=""
              data-product-min-order="10"
        class="th-btn-outline shrink-0 flex items-center justify-center !w-10 !h-10 !p-0 rounded-full" aria-label="Chat with seller">
        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="pointer-events-none" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
      </button>
      <button type="button" class="shrink-0 flex items-center justify-center !w-10 !h-10 !p-0 rounded-full th-btn" data-add-to-cart="LST-0002" aria-label="Add to cart"><svg class="w-5 h-5 pointer-events-none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" aria-hidden="true"><path d="M12 5v14M5 12h14"/></svg></button>
    </div>
    </div>
  "
`;

exports[`renderListingCard karakterizasyon (taşıma güvenlik ağı) > stok yok (OOS) 1`] = `
"
    <div class="fy26-product-card-wrapper relative isolate flex flex-col justify-between w-full rounded-md overflow-hidden bg-white pb-3 border-0
            group-data-[list-mode=grid]/grid:border group-data-[list-mode=grid]/grid:border-gray-200 group-data-[list-mode=grid]/grid:rounded-md
            min-[480px]:group-data-[list-mode=grid]/grid:border-0
            group-data-[list-mode=list]/grid:grid
            group-data-[list-mode=list]/grid:grid-cols-[76px_1fr_auto]
            group-data-[list-mode=list]/grid:grid-rows-[1fr_auto]
            group-data-[list-mode=list]/grid:gap-x-3
            group-data-[list-mode=list]/grid:gap-y-0
            group-data-[list-mode=list]/grid:p-3
            group-data-[list-mode=list]/grid:border
            group-data-[list-mode=list]/grid:border-[var(--product-card-border,#e5e7eb)]
            group-data-[list-mode=list]/grid:rounded-lg
            group-data-[list-mode=list]/grid:overflow-visible
            min-[480px]:group-data-[list-mode=list]/grid:grid-cols-[200px_1fr]
            min-[480px]:group-data-[list-mode=list]/grid:gap-x-4
            min-[1200px]:group-data-[list-mode=list]/grid:flex
            min-[1200px]:group-data-[list-mode=list]/grid:flex-row
            min-[1200px]:group-data-[list-mode=list]/grid:items-start
            min-[1200px]:group-data-[list-mode=list]/grid:gap-4">
      <!-- Image area (full-bleed, kart padding'inin dışında) + favori kalbi (bkz. favBtnHtml) -->
      <div class="searchx-img-area relative mb-3
            group-data-[list-mode=grid]/grid:mb-2
            min-[480px]:group-data-[list-mode=grid]/grid:mb-3
            group-data-[list-mode=list]/grid:row-[1/-1]
            group-data-[list-mode=list]/grid:col-start-1
            group-data-[list-mode=list]/grid:self-start
            group-data-[list-mode=list]/grid:mb-0
            group-data-[list-mode=list]/grid:w-full
            group-data-[list-mode=list]/grid:rounded-md
            group-data-[list-mode=list]/grid:border
            group-data-[list-mode=list]/grid:border-gray-200
            group-data-[list-mode=list]/grid:overflow-hidden
            min-[480px]:group-data-[list-mode=list]/grid:border-0
            min-[480px]:group-data-[list-mode=list]/grid:rounded-none
            min-[1200px]:group-data-[list-mode=list]/grid:w-60
            min-[1200px]:group-data-[list-mode=list]/grid:shrink-0">
        <a href="/pages/product-detail.html?id=LST-0001" class="block">
          <div class="absolute top-2 start-2 z-20 px-2 py-1 rounded-md bg-red-600 text-white text-[11px] font-semibold shadow-sm pointer-events-none">Out of stock</div>
          
          <div class="absolute inset-0 z-10 bg-white/40 pointer-events-none"></div>
          
    <div class="relative aspect-square w-full flex-shrink-0 overflow-hidden group/img">
      <!-- Slides container -->
      <div class="product-slider flex w-full h-full transition-transform duration-300 ease-out"
           data-slider-id="LST-0001"
           style="transform: translateX(0%)">
        
      <div class="w-full h-full flex-shrink-0">
        <img src="https://example.com/img.jpg" alt="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş" class="w-full h-full object-cover" decoding="async"  />
      </div>
    
      </div>

      
      

      <!-- Camera icon (bottom-left) - DISABLED -->
    </div>
  
          <div data-sp-slot="LST-0001" data-sp-align="center" class="hidden group-data-[list-mode=grid]/grid:flex items-center justify-center gap-1 absolute inset-x-0 bottom-0 z-20 h-[21px] min-[480px]:h-6 px-2 overflow-hidden bg-white/95 border-t border-gray-100 text-[9.5px] min-[480px]:text-[10.5px] font-bold whitespace-nowrap text-[rgb(34,137,31)] pointer-events-none">
    <svg class="w-3.5 h-3.5 shrink-0 text-[rgb(34,137,31)]" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
      <polyline points="20 6 9 17 4 12"/>
    </svg>
  <span class="truncate">5 günde sevkiyat</span></div>
        </a>
        <button type="button"
              data-fav-btn="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5 adet"
              class="th-no-press absolute top-2 end-2 z-30 w-8 h-8 flex items-center justify-center rounded-full border-0 bg-white/95 shadow-sm cursor-pointer text-gray-500 hover:text-red-500
              max-sm:group-data-[list-mode=list]/grid:top-1 max-sm:group-data-[list-mode=list]/grid:end-1 max-sm:group-data-[list-mode=list]/grid:w-6 max-sm:group-data-[list-mode=list]/grid:h-6"
              aria-label="Add to favorites">
        <svg class="w-[18px] h-[18px] pointer-events-none max-sm:group-data-[list-mode=list]/grid:w-3.5 max-sm:group-data-[list-mode=list]/grid:h-3.5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.51 4.04 3 5.5l7 7Z"/></svg>
      </button>
      </div>

      <!-- Content area -->
      <div class="fy26-product-card-content flex-1 flex flex-col
            group-data-[list-mode=list]/grid:col-start-2
            group-data-[list-mode=list]/grid:row-start-1
            group-data-[list-mode=list]/grid:min-w-0
            min-[1200px]:group-data-[list-mode=list]/grid:flex-1">
        <!-- Title area -->
        <div class="px-3">
          <h2 class="searchx-product-e-title text-[13px] font-normal leading-[17px] min-h-[34px] min-[480px]:text-sm min-[480px]:leading-[20px] min-[480px]:min-h-[40px] text-[#333] overflow-hidden text-ellipsis line-clamp-2 m-0
            group-data-[list-mode=list]/grid:line-clamp-1 group-data-[list-mode=list]/grid:!min-h-0 min-[480px]:group-data-[list-mode=list]/grid:line-clamp-2
            min-[480px]:group-data-[list-mode=list]/grid:!h-auto
            min-[480px]:group-data-[list-mode=list]/grid:text-base
            min-[480px]:group-data-[list-mode=list]/grid:leading-[22px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-[13px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-[17px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-[51px]">
            <a href="/magaza/SEL-00020" title="EgeBeauty" class="font-semibold text-gray-900 no-underline hover:underline">EgeBeauty<img src="/src/assets/images/verfied.png" alt="" class="inline-block w-3.5 h-3.5 align-[-2.5px] ms-0.5" /></a> <a href="/pages/product-detail.html?id=LST-0001" target="_blank" class="text-inherit no-underline hover:text-primary-500"><span>Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş</span></a>
          </h2>
          <div data-sp-slot="LST-0001" class="hidden group-data-[list-mode=list]/grid:flex items-center min-w-0 gap-1 mt-1 h-[15px] overflow-hidden text-[11px] leading-tight min-[480px]:text-xs text-[rgb(34,137,31)]">
        
    <svg class="w-3.5 h-3.5 shrink-0 text-[rgb(34,137,31)]" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
      <polyline points="20 6 9 17 4 12"/>
    </svg>
  
        <span class="truncate">5 günde sevkiyat</span>
      </div>
          <div class="flex min-[480px]:hidden items-center gap-x-1.5 gap-y-0.5 mt-1 text-[11px] leading-tight text-gray-500"><span class="inline-flex items-center gap-0.5"><svg style="width:12px;height:12px;flex-shrink:0;" viewBox="0 0 24 24" fill="#f59e0b" stroke="none"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87L18.18 21 12 17.27 5.82 21 7 14.14l-5-4.87 6.91-1.01L12 2z"/></svg><span class="font-medium text-gray-700">4.2</span><span class="text-gray-400">(76)</span></span><span class="text-gray-300">·</span><span class="whitespace-nowrap">Min. 5 adet</span></div>
        </div>

        <!-- Price area -->
        <div class="px-3 mt-2">
          <div class="fy26-price text-[15px] leading-tight font-semibold text-gray-900 whitespace-nowrap min-[480px]:text-lg sm:text-xl sm:leading-[26px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-base
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-[1.375rem]">₺115,38-128,95</div>
          <div class="fy26-moq-stats hidden min-[480px]:flex gap-1.5 flex-wrap mt-0.5
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-4
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:[&_.text-sm]:text-xs
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:[&_.text-sm]:leading-4">
            <div class="text-[11px] leading-tight min-[480px]:text-sm min-[480px]:leading-[18px] font-normal text-gray-900">Minimum order: 5 adet</div>
          </div>
          <div class="mt-1 text-xs font-medium text-red-600">Out of stock</div>
        </div>

        <!-- Supplier area -->
        <div class="px-3 mt-2">
          <a class="hidden min-[480px]:block text-xs font-normal text-[#767676] no-underline whitespace-nowrap overflow-hidden text-ellipsis mb-0.5">EgeBeauty</a>
          <div class="hidden min-[480px]:flex flex-wrap items-center gap-x-1 gap-y-0.5 text-[11px] min-[480px]:text-xs font-normal leading-4 text-black mt-0.5">
        <svg style="width:12px;height:12px;flex-shrink:0;" viewBox="0 0 24 24" fill="#f59e0b" stroke="none"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87L18.18 21 12 17.27 5.82 21 7 14.14l-5-4.87 6.91-1.01L12 2z"/></svg>
        <a class="text-xs font-normal text-black no-underline"><span>25 yrs</span> 🇹🇷 <span>TR</span></a><span class="text-xs font-normal text-gray-900 leading-4"><span>4.2</span>/5.0 <span>(76)</span></span>
      </div>
        </div>
      </div>

      <!-- Action buttons -->
      <div class="action-area-layout flex group-data-[list-mode=list]/grid:hidden min-[480px]:group-data-[list-mode=list]/grid:flex group-data-[list-mode=grid]/grid:hidden min-[480px]:group-data-[list-mode=grid]/grid:flex flex-col min-[480px]:flex-row gap-2 px-3 mt-3 items-stretch min-[480px]:items-center
            group-data-[list-mode=list]/grid:col-start-2
            group-data-[list-mode=list]/grid:row-start-2
            group-data-[list-mode=list]/grid:px-0
            group-data-[list-mode=list]/grid:mt-2
            min-[1200px]:group-data-[list-mode=list]/grid:flex-col
            min-[1200px]:group-data-[list-mode=list]/grid:items-stretch
            min-[1200px]:group-data-[list-mode=list]/grid:w-[140px]
            min-[1200px]:group-data-[list-mode=list]/grid:mt-0
            min-[1200px]:group-data-[list-mode=list]/grid:shrink-0">
        <button type="button" class="searchx-product-e-abutton flex-1 flex items-center justify-center h-9 text-xs sm:text-sm font-medium whitespace-nowrap rounded-md bg-gray-200 text-gray-500 cursor-not-allowed
              min-[1200px]:group-data-[list-mode=list]/grid:flex-none
              min-[1200px]:group-data-[list-mode=list]/grid:w-full
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:px-2
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-8"
              disabled aria-disabled="true">
        Out of stock
      </button>
        <button type="button"
              data-chat-trigger
              data-seller-id="SEL-00020"
              data-product-id="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5"
              class="th-btn-outline searchx-product-e-chatbutton flex-1 flex items-center justify-center h-9 text-xs sm:text-sm font-medium cursor-pointer whitespace-nowrap
              min-[1200px]:group-data-[list-mode=list]/grid:flex-none
              min-[1200px]:group-data-[list-mode=list]/grid:w-full
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:px-2
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-8">
        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
        Chat with seller
      </button>
      </div>
      <div class="hidden group-data-[list-mode=grid]/grid:flex min-[480px]:group-data-[list-mode=grid]/grid:hidden items-center gap-1 px-2 mt-auto pt-2.5">
      <button type="button" class="flex-1 min-w-0 flex items-center justify-center gap-1 h-8 rounded-md !px-1 text-[11px] font-semibold whitespace-nowrap bg-gray-200 text-gray-500 cursor-not-allowed" disabled aria-disabled="true">Out of stock</button>
      <button type="button" data-chat-trigger
              data-seller-id="SEL-00020"
              data-product-id="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5"
        class="th-btn-outline shrink-0 flex items-center justify-center !w-8 !h-8 !p-0 rounded-md" aria-label="Chat with seller">
        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="pointer-events-none" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
      </button>
    </div>
      <div class="hidden group-data-[list-mode=list]/grid:flex min-[480px]:group-data-[list-mode=list]/grid:!hidden flex-col items-center gap-2 col-start-3 row-start-1 self-center pl-1">
      <button type="button" data-chat-trigger
              data-seller-id="SEL-00020"
              data-product-id="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5"
        class="th-btn-outline shrink-0 flex items-center justify-center !w-10 !h-10 !p-0 rounded-full" aria-label="Chat with seller">
        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="pointer-events-none" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
      </button>
      <button type="button" class="shrink-0 flex items-center justify-center !w-10 !h-10 !p-0 rounded-full bg-gray-200 text-gray-400 cursor-not-allowed" disabled aria-disabled="true" aria-label="Out of stock"><svg class="w-5 h-5 pointer-events-none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" aria-hidden="true"><path d="M12 5v14M5 12h14"/></svg></button>
    </div>
    </div>
  "
`;

exports[`renderListingCard karakterizasyon (taşıma güvenlik ağı) > tam veri kartı — mevcut çıktı 1`] = `
"
    <div class="fy26-product-card-wrapper relative isolate flex flex-col justify-between w-full rounded-md overflow-hidden bg-white pb-3 border-0
            group-data-[list-mode=grid]/grid:border group-data-[list-mode=grid]/grid:border-gray-200 group-data-[list-mode=grid]/grid:rounded-md
            min-[480px]:group-data-[list-mode=grid]/grid:border-0
            group-data-[list-mode=list]/grid:grid
            group-data-[list-mode=list]/grid:grid-cols-[76px_1fr_auto]
            group-data-[list-mode=list]/grid:grid-rows-[1fr_auto]
            group-data-[list-mode=list]/grid:gap-x-3
            group-data-[list-mode=list]/grid:gap-y-0
            group-data-[list-mode=list]/grid:p-3
            group-data-[list-mode=list]/grid:border
            group-data-[list-mode=list]/grid:border-[var(--product-card-border,#e5e7eb)]
            group-data-[list-mode=list]/grid:rounded-lg
            group-data-[list-mode=list]/grid:overflow-visible
            min-[480px]:group-data-[list-mode=list]/grid:grid-cols-[200px_1fr]
            min-[480px]:group-data-[list-mode=list]/grid:gap-x-4
            min-[1200px]:group-data-[list-mode=list]/grid:flex
            min-[1200px]:group-data-[list-mode=list]/grid:flex-row
            min-[1200px]:group-data-[list-mode=list]/grid:items-start
            min-[1200px]:group-data-[list-mode=list]/grid:gap-4">
      <!-- Image area (full-bleed, kart padding'inin dışında) + favori kalbi (bkz. favBtnHtml) -->
      <div class="searchx-img-area relative mb-3
            group-data-[list-mode=grid]/grid:mb-2
            min-[480px]:group-data-[list-mode=grid]/grid:mb-3
            group-data-[list-mode=list]/grid:row-[1/-1]
            group-data-[list-mode=list]/grid:col-start-1
            group-data-[list-mode=list]/grid:self-start
            group-data-[list-mode=list]/grid:mb-0
            group-data-[list-mode=list]/grid:w-full
            group-data-[list-mode=list]/grid:rounded-md
            group-data-[list-mode=list]/grid:border
            group-data-[list-mode=list]/grid:border-gray-200
            group-data-[list-mode=list]/grid:overflow-hidden
            min-[480px]:group-data-[list-mode=list]/grid:border-0
            min-[480px]:group-data-[list-mode=list]/grid:rounded-none
            min-[1200px]:group-data-[list-mode=list]/grid:w-60
            min-[1200px]:group-data-[list-mode=list]/grid:shrink-0">
        <a href="/pages/product-detail.html?id=LST-0001" class="block">
          
          
          
          
    <div class="relative aspect-square w-full flex-shrink-0 overflow-hidden group/img">
      <!-- Slides container -->
      <div class="product-slider flex w-full h-full transition-transform duration-300 ease-out"
           data-slider-id="LST-0001"
           style="transform: translateX(0%)">
        
      <div class="w-full h-full flex-shrink-0">
        <img src="https://example.com/img.jpg" alt="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş" class="w-full h-full object-cover" decoding="async"  />
      </div>
    
      </div>

      
      

      <!-- Camera icon (bottom-left) - DISABLED -->
    </div>
  
          <div data-sp-slot="LST-0001" data-sp-align="center" class="hidden group-data-[list-mode=grid]/grid:flex items-center justify-center gap-1 absolute inset-x-0 bottom-0 z-20 h-[21px] min-[480px]:h-6 px-2 overflow-hidden bg-white/95 border-t border-gray-100 text-[9.5px] min-[480px]:text-[10.5px] font-bold whitespace-nowrap text-[rgb(34,137,31)] pointer-events-none">
    <svg class="w-3.5 h-3.5 shrink-0 text-[rgb(34,137,31)]" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
      <polyline points="20 6 9 17 4 12"/>
    </svg>
  <span class="truncate">5 günde sevkiyat</span></div>
        </a>
        <button type="button"
              data-fav-btn="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5 adet"
              class="th-no-press absolute top-2 end-2 z-30 w-8 h-8 flex items-center justify-center rounded-full border-0 bg-white/95 shadow-sm cursor-pointer text-gray-500 hover:text-red-500
              max-sm:group-data-[list-mode=list]/grid:top-1 max-sm:group-data-[list-mode=list]/grid:end-1 max-sm:group-data-[list-mode=list]/grid:w-6 max-sm:group-data-[list-mode=list]/grid:h-6"
              aria-label="Add to favorites">
        <svg class="w-[18px] h-[18px] pointer-events-none max-sm:group-data-[list-mode=list]/grid:w-3.5 max-sm:group-data-[list-mode=list]/grid:h-3.5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.51 4.04 3 5.5l7 7Z"/></svg>
      </button>
      </div>

      <!-- Content area -->
      <div class="fy26-product-card-content flex-1 flex flex-col
            group-data-[list-mode=list]/grid:col-start-2
            group-data-[list-mode=list]/grid:row-start-1
            group-data-[list-mode=list]/grid:min-w-0
            min-[1200px]:group-data-[list-mode=list]/grid:flex-1">
        <!-- Title area -->
        <div class="px-3">
          <h2 class="searchx-product-e-title text-[13px] font-normal leading-[17px] min-h-[34px] min-[480px]:text-sm min-[480px]:leading-[20px] min-[480px]:min-h-[40px] text-[#333] overflow-hidden text-ellipsis line-clamp-2 m-0
            group-data-[list-mode=list]/grid:line-clamp-1 group-data-[list-mode=list]/grid:!min-h-0 min-[480px]:group-data-[list-mode=list]/grid:line-clamp-2
            min-[480px]:group-data-[list-mode=list]/grid:!h-auto
            min-[480px]:group-data-[list-mode=list]/grid:text-base
            min-[480px]:group-data-[list-mode=list]/grid:leading-[22px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-[13px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-[17px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-[51px]">
            <a href="/magaza/SEL-00020" title="EgeBeauty" class="font-semibold text-gray-900 no-underline hover:underline">EgeBeauty<img src="/src/assets/images/verfied.png" alt="" class="inline-block w-3.5 h-3.5 align-[-2.5px] ms-0.5" /></a> <a href="/pages/product-detail.html?id=LST-0001" target="_blank" class="text-inherit no-underline hover:text-primary-500"><span>Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş</span></a>
          </h2>
          <div data-sp-slot="LST-0001" class="hidden group-data-[list-mode=list]/grid:flex items-center min-w-0 gap-1 mt-1 h-[15px] overflow-hidden text-[11px] leading-tight min-[480px]:text-xs text-[rgb(34,137,31)]">
        
    <svg class="w-3.5 h-3.5 shrink-0 text-[rgb(34,137,31)]" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
      <polyline points="20 6 9 17 4 12"/>
    </svg>
  
        <span class="truncate">5 günde sevkiyat</span>
      </div>
          <div class="flex min-[480px]:hidden items-center gap-x-1.5 gap-y-0.5 mt-1 text-[11px] leading-tight text-gray-500"><span class="inline-flex items-center gap-0.5"><svg style="width:12px;height:12px;flex-shrink:0;" viewBox="0 0 24 24" fill="#f59e0b" stroke="none"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87L18.18 21 12 17.27 5.82 21 7 14.14l-5-4.87 6.91-1.01L12 2z"/></svg><span class="font-medium text-gray-700">4.2</span><span class="text-gray-400">(76)</span></span><span class="text-gray-300">·</span><span class="whitespace-nowrap">Min. 5 adet</span></div>
        </div>

        <!-- Price area -->
        <div class="px-3 mt-2">
          <div class="fy26-price text-[15px] leading-tight font-semibold text-gray-900 whitespace-nowrap min-[480px]:text-lg sm:text-xl sm:leading-[26px]
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-base
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-[1.375rem]">₺115,38-128,95</div>
          <div class="fy26-moq-stats hidden min-[480px]:flex gap-1.5 flex-wrap mt-0.5
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:leading-4
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:[&_.text-sm]:text-xs
            lg:max-[1599px]:group-data-[list-mode=grid]/grid:[&_.text-sm]:leading-4">
            <div class="text-[11px] leading-tight min-[480px]:text-sm min-[480px]:leading-[18px] font-normal text-gray-900">Minimum order: 5 adet</div>
          </div>
          
        </div>

        <!-- Supplier area -->
        <div class="px-3 mt-2">
          <a class="hidden min-[480px]:block text-xs font-normal text-[#767676] no-underline whitespace-nowrap overflow-hidden text-ellipsis mb-0.5">EgeBeauty</a>
          <div class="hidden min-[480px]:flex flex-wrap items-center gap-x-1 gap-y-0.5 text-[11px] min-[480px]:text-xs font-normal leading-4 text-black mt-0.5">
        <svg style="width:12px;height:12px;flex-shrink:0;" viewBox="0 0 24 24" fill="#f59e0b" stroke="none"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87L18.18 21 12 17.27 5.82 21 7 14.14l-5-4.87 6.91-1.01L12 2z"/></svg>
        <a class="text-xs font-normal text-black no-underline"><span>25 yrs</span> 🇹🇷 <span>TR</span></a><span class="text-xs font-normal text-gray-900 leading-4"><span>4.2</span>/5.0 <span>(76)</span></span>
      </div>
        </div>
      </div>

      <!-- Action buttons -->
      <div class="action-area-layout flex group-data-[list-mode=list]/grid:hidden min-[480px]:group-data-[list-mode=list]/grid:flex group-data-[list-mode=grid]/grid:hidden min-[480px]:group-data-[list-mode=grid]/grid:flex flex-col min-[480px]:flex-row gap-2 px-3 mt-3 items-stretch min-[480px]:items-center
            group-data-[list-mode=list]/grid:col-start-2
            group-data-[list-mode=list]/grid:row-start-2
            group-data-[list-mode=list]/grid:px-0
            group-data-[list-mode=list]/grid:mt-2
            min-[1200px]:group-data-[list-mode=list]/grid:flex-col
            min-[1200px]:group-data-[list-mode=list]/grid:items-stretch
            min-[1200px]:group-data-[list-mode=list]/grid:w-[140px]
            min-[1200px]:group-data-[list-mode=list]/grid:mt-0
            min-[1200px]:group-data-[list-mode=list]/grid:shrink-0">
        <button type="button" class="searchx-product-e-abutton th-btn flex-1 flex items-center justify-center h-9 text-xs sm:text-sm font-medium cursor-pointer whitespace-nowrap
              min-[1200px]:group-data-[list-mode=list]/grid:flex-none
              min-[1200px]:group-data-[list-mode=list]/grid:w-full
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:px-2
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-8"
              data-add-to-cart="LST-0001">
        Add to cart
      </button>
        <button type="button"
              data-chat-trigger
              data-seller-id="SEL-00020"
              data-product-id="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5"
              class="th-btn-outline searchx-product-e-chatbutton flex-1 flex items-center justify-center h-9 text-xs sm:text-sm font-medium cursor-pointer whitespace-nowrap
              min-[1200px]:group-data-[list-mode=list]/grid:flex-none
              min-[1200px]:group-data-[list-mode=list]/grid:w-full
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:text-xs
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:px-2
              lg:max-[1599px]:group-data-[list-mode=grid]/grid:h-8">
        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
        Chat with seller
      </button>
      </div>
      <div class="hidden group-data-[list-mode=grid]/grid:flex min-[480px]:group-data-[list-mode=grid]/grid:hidden items-center gap-1 px-2 mt-auto pt-2.5">
      <button type="button" class="flex-1 min-w-0 flex items-center justify-center gap-1 h-8 rounded-md !px-1 text-[11px] font-semibold whitespace-nowrap th-btn" data-add-to-cart="LST-0001"><span class="hidden min-[400px]:inline-flex shrink-0"><svg class="w-4 h-4 pointer-events-none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="9" cy="20" r="1"/><circle cx="18" cy="20" r="1"/><path d="M2 3h2.2l2.2 12.2a1.5 1.5 0 0 0 1.5 1.2h8.6a1.5 1.5 0 0 0 1.5-1.2L21 7H5"/></svg></span><span class="truncate">Add to cart</span></button>
      <button type="button" data-chat-trigger
              data-seller-id="SEL-00020"
              data-product-id="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5"
        class="th-btn-outline shrink-0 flex items-center justify-center !w-8 !h-8 !p-0 rounded-md" aria-label="Chat with seller">
        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="pointer-events-none" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
      </button>
    </div>
      <div class="hidden group-data-[list-mode=list]/grid:flex min-[480px]:group-data-[list-mode=list]/grid:!hidden flex-col items-center gap-2 col-start-3 row-start-1 self-center pl-1">
      <button type="button" data-chat-trigger
              data-seller-id="SEL-00020"
              data-product-id="LST-0001"
              data-product-title="Gucci Bloom Eau de — Toptan Kozmetik Ürünleri, Premium Formül, Dermatolojik Test Edilmiş"
              data-product-price="₺115,38-128,95"
              data-product-thumb="https://example.com/img.jpg"
              data-product-min-order="5"
        class="th-btn-outline shrink-0 flex items-center justify-center !w-10 !h-10 !p-0 rounded-full" aria-label="Chat with seller">
        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="pointer-events-none" aria-hidden="true"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
      </button>
      <button type="button" class="shrink-0 flex items-center justify-center !w-10 !h-10 !p-0 rounded-full th-btn" data-add-to-cart="LST-0001" aria-label="Add to cart"><svg class="w-5 h-5 pointer-events-none" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" aria-hidden="true"><path d="M12 5v14M5 12h14"/></svg></button>
    </div>
    </div>
  "
`;
